Update mockups: Tweak styling and navbar layout. Add user-centrick navs (new-{project/post})

--- a/resources/mockups/posts.html
+++ b/resources/mockups/posts.html
@@ -12,16 +12,20 @@
 </head>
 <body>
 
-  <header>
+  <header class="banner banner-top">
     <h1>Tincman's PLOG</h1>
-    <nav>
-      <ul>
-	<li class="current-page"><a href="posts.html">All Posts</a></li>
-	<li><a href="projects.html">Projects</a></li>
-	<li><a href="profile.html">Profile</a></li>
-	<li><a href="about.html">About</a></li>
-      </ul>
-    </nav>
+      <nav>
+	<ul>
+	  <li class="current-page"><a href="posts.html">All Posts</a></li>
+	  <li><a href="projects.html">Projects</a></li>
+	  <li><a href="about.html">About</a></li>
+	</ul>
+	<ul>
+	  <li><a href="new-post.html">New Post</a></li>
+	  <li><a href="new-project.html">New Project</a></li>
+	  <li><a href="profile.html">Profile</a></li>
+	</ul>
+      </nav>
   </header>
 
   <section class="content">
@@ -85,7 +89,7 @@
 	
   </section>
 
-  <footer>
+  <footer class="banner banner-bottom">
     This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.
   </footer>
 
